--- a/src/views/authentication/login.hbs
+++ b/src/views/authentication/login.hbs
@@ -1,3 +1,19 @@
-<div class="login-container">
-  <h1>Login</h1>
+<div class="login-container d-flex justify-content-center mt-5 text-light">
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address/Username</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+        placeholder="Enter email/username">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-check mb-2">
+      <input type="checkbox" class="form-check-input" id="loginShowPassword">
+      <label class="form-check-label" for="loginShowPassword">Show Password</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+    <a href="/register" class="btn btn-secondary float-right">Register</a>
+  </form>
 </div>
