--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -15,8 +15,10 @@
 <body>
   <div class="main-container">
     {{> header }}
+    {{#if showError}}
+    <p class="text-center text-warning mt-3">Something went wrong! Please try again.</p>
+    {{/if}}
     {{{ body }}}
-
     {{> footer }}
   </div>
 
