--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -9,12 +9,14 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/css/styles.css" />
 </head>
 
 <body>
   <div class="main-container">
     {{> header }}
+    {{> flash}}
     {{#if showError}}
     <p class="text-center text-warning mt-3">Something went wrong! Please try again.</p>
     {{/if}}
