--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -10,10 +10,17 @@
         <li class="nav-item">
           <a class="nav-link" href="/snippets">Snippets</a>
         </li>
+        {{#unless authorizedUser}}
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
         </li>
+        {{/unless}}
       </ul>
     </div>
+    {{#if authorizedUser}}
+    <form class="float-right" action="/logout" method="post">
+      <button class="btn btn-warning">Logout</button>
+    </form>
+    {{/if}}
   </nav>
 </header>
