Now renders the current snippet in the update view

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -29,7 +29,7 @@
     </div>
     {{#if authorizedUser}}
     <form class="float-right" action="/logout" method="post">
-      <p class="text-light float-left mr-3">Logged in as, {{user}}</p>
+      <p class="text-light float-left mr-3 mt-2">Logged in as, {{user}}</p>
       <button class="btn btn-warning">Logout</button>
     </form>
     {{/if}}
