--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -9,17 +9,13 @@
     </div>
     <div class="form-group">
       <label for="registrationInputUsername">Username</label>
-      <input type="text" class="form-control" name="username" id="registrationInputUsername"
+      <input type="text" minlength="4" class="form-control" name="username" id="registrationInputUsername"
         aria-describedby="emailHelp" placeholder="Enter username">
     </div>
     <div class="form-group">
       <label for="registrationInputPassword">Password</label>
-      <input type="password" class="form-control" name="passphrase" id="registrationInputPassword"
+      <input type="password" minlength="8" class="form-control" name="passphrase" id="registrationInputPassword"
         placeholder="Password">
-    </div>
-    <div class="form-check mb-2">
-      <input type="checkbox" class="form-check-input" id="registrationShowPassword">
-      <label class="form-check-label" for="registrationShowPassword">Show Password</label>
     </div>
     <button type="submit" value="Submit" class="btn btn-primary">Register</button>
     <a href="/login" class="btn btn-secondary float-right">Login</a>
