Changes for production

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="login-container d-flex justify-content-center mt-5 text-light">
-  <form action="/login" method="post">
+  <form action="./login" method="post">
     <div class="form-group">
       <label for="exampleInputUsername1">Username</label>
       <input type="text" class="form-control" id="exampleUsername1" name="username" placeholder="Enter username">
@@ -9,6 +9,6 @@
       <input type="password" class="form-control" name="passphrase" id="exampleInputPassword1" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
-    <a href="/register" class="btn btn-secondary float-right">Register</a>
+    <a href="./register" class="btn btn-secondary float-right">Register</a>
   </form>
 </div>
