--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,5 +1,5 @@
 <div class="register-container d-flex justify-content-center mt-5 text-light">
-  <form action="/register" method="post">
+  <form action="./register" method="post">
     <div class="form-group">
       <label for="registrationInputEmail">Email address</label>
       <input type="email" class="form-control" name="email" id="registrationInputEmail" aria-describedby="emailHelp"
@@ -18,6 +18,6 @@
         placeholder="Password">
     </div>
     <button type="submit" value="Submit" class="btn btn-primary">Register</button>
-    <a href="/login" class="btn btn-secondary float-right">Login</a>
+    <a href="./login" class="btn btn-secondary float-right">Login</a>
   </form>
 </div>
