--- a/src/views/snippets/new.hbs
+++ b/src/views/snippets/new.hbs
@@ -1,5 +1,5 @@
 <div class="snippets-container-new text-center mx-auto">
-  <form action="/snippets/new" method="post">
+  <form action="./snippets/new" method="post">
     <div class="form-group">
       <h2 class="text-light"><strong>{{user}}</strong></h2>
     </div>
