--- a/src/views/snippets/update.hbs
+++ b/src/views/snippets/update.hbs
@@ -1,6 +1,6 @@
 <div class="snippets-container-new text-center mx-auto">
   {{#if infoToSend}}
-  <form action="/snippets/update/{{infoToSend.id}}" method="POST">
+  <form action="./snippets/update/{{infoToSend.id}}" method="POST">
     <div class="form-group">
       <h2 class="text-light"><strong>{{user}}</strong></h2>
       <label for="snippetNameUpdate" class="text-light">Title</label>
